<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_restaurant">

    <ImageView
        android:id="@+id/ins_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        app:srcCompat="@drawable/low_risk"
        tools:ignore="RtlCompat"
        android:contentDescription="@string/rate_icon" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ins_icon"
        android:layout_alignTop="@id/ins_icon"
        android:layout_toStartOf="@id/non_critical"
        android:layout_marginStart="10dp"
        android:text="@string/restaurant_inspectionPerformedOn" />

    <TextView
        android:id="@+id/harzard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/date"
        android:layout_toStartOf="@id/critical"
        android:layout_below="@id/date"
        android:layout_marginTop="5dp"
        android:text="@string/restaurant_hazardLevel"/>

    <TextView
        android:id="@+id/non_critical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/date"
        android:layout_marginEnd="10dp"
        android:text="@string/inspection_num_noncritical" />

    <TextView
        android:id="@+id/critical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/non_critical"
        android:layout_alignEnd="@id/non_critical"
        android:layout_marginTop="5dp"
        android:text="@string/inspection_num_critical" />
</RelativeLayout>
