<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_inspection">

    <TextView
        android:id="@+id/single_ins_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_inspectionPerformedOn"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ins_toolbar"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/single_ins_rate"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/single_ins_date"
        app:srcCompat="@drawable/low_risk"
        tools:layout_editor_absoluteY="160dp"
        android:contentDescription="@string/rate_icon" />

    <TextView
        android:id="@+id/single_ins_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/single_ins_rate"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/single_ins_rate"
        android:layout_marginTop="5dp"
        android:text="@string/inspection_type" />

    <TextView
        android:id="@+id/single_ins_hazard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_ins_type"
        android:layout_alignStart="@id/single_ins_type"
        android:text="@string/restaurant_hazardLevel" />

    <TextView
        android:id="@+id/single_ins_critical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inspection_num_critical"
        android:layout_alignTop="@id/single_ins_type"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/single_ins_noncritical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inspection_num_noncritical"
        android:layout_below="@id/single_ins_critical"
        android:layout_alignEnd="@id/single_ins_critical"
        android:layout_marginTop="5dp"/>

    <ListView
        android:id="@+id/vioList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/single_ins_noncritical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ins_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />
</RelativeLayout>