<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_inspection">


    <fragment
        android:id="@+id/restaurantMapFragment_map_1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/gpsimage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="gps_image"
        android:src="@drawable/gpsicon"
        android:layout_alignBottom="@+id/listimage"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/listimage"/>

    <ImageView
        android:id="@+id/listimage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:contentDescription="list_image"
        android:src="@drawable/listicon"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:background="#55000000"
        android:elevation="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/restaurantMapFragment_map_1">

        <TextView
            android:id="@+id/restaurant_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:fontFamily="@font/abel"
            android:text="@string/filter"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/keyword"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/restaurant_filter"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_border"
            android:elevation="10dp"
            android:fontFamily="@font/abel"
            android:hint="@string/search_hint"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_hazardLevel"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:layout_below="@+id/keyword"
            android:layout_alignStart="@+id/keyword"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_border"
            android:elevation="10dp"
            android:fontFamily="@font/abel" />

        <Spinner
            android:id="@+id/spinner_criticalVio"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_below="@+id/spinner_hazardLevel"
            android:layout_alignStart="@+id/keyword"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_border"
            android:elevation="10dp"
            android:fontFamily="@font/abel" />

        <EditText
            android:id="@+id/criticalNum"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_below="@+id/spinner_hazardLevel"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/spinner_criticalVio"
            android:background="@drawable/white_border"
            android:elevation="10dp"
            android:fontFamily="@font/abel"
            android:hint="@string/critical_hint"
            android:inputType="number"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_favorite"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_below="@+id/spinner_criticalVio"
            android:layout_alignStart="@+id/keyword"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_border"
            android:elevation="10dp"
            android:fontFamily="@font/abel" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/restaurant_filter"
            android:layout_marginEnd= "15dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:elevation="10dp"
            android:fontFamily="@font/abel"
            android:text="@string/search"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clear_search"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/search"
            android:layout_marginEnd= "15dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:elevation="10dp"
            android:fontFamily="@font/abel"
            android:text="@string/clear_search"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

</RelativeLayout>